# Skyscape

./: .gitignore  CMakeLists.txt  CUSTOMIZATION.md  README.md  download_assets.ps1  setup_dependencies.ps1  upload_to_github.ps1
.github/: copilot-instructions.md
assets/shaders/: flower.frag  flower.vert  infinite_terrain.frag  infinite_terrain.vert  particle.frag  particle.vert  plane.frag  plane.vert  stars.frag  stars.vert  terrain.frag  terrain.vert  tree.frag  tree.vert
report/: skyscape.aux  skyscape.fdb_latexmk  skyscape.fls  skyscape.out  skyscape.tex  skyscape.toc  skyscape.xdv
src/: main.cpp
src/core/: Window.cpp  Window.h
src/graphics/: Camera.h  Mesh.h  Shader.cpp  Shader.h
src/world/: Cabin.cpp  Cabin.h  Grid.cpp  Grid.h  InfiniteTerrain.cpp  InfiniteTerrain.h  ParticleSystem.cpp  ParticleSystem.h  Plane.cpp  Plane.h  Skybox.cpp  Skybox.h  Stars.cpp  Stars.h  Terrain.cpp  Terrain.h  Tree.cpp  Tree.h
